--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,6 +138,10 @@ span.panel-heading-title {
     font-size: 24px;
 }
 
+span.panel-heading-sub-title {
+    font-size: 18px;
+}
+
 label.sidebar-btn-title {
     color: #fff;
 }
@@ -187,6 +191,65 @@ label.sidebar-btn-title {
         }
     }
 }
+
+// listings/indexのcss
+a.sidebar-item {
+    font-size: 16px;
+    color: #222;
+  }
+  
+  .sidebar-list li.active {
+    font-weight: bold;
+  }
+  
+  .ul-unstyled{
+    list-style: none; padding-left: 0;
+  }
+  
+  li.panel-body {
+      border-top: 1px solid #eeeeee;
+  }
+  
+  li.panel-body:first-child {
+    border-top: none;
+  }
+  
+  span.listing-title {
+    font-size: 18px;
+  }
+  
+  .row-table{
+    display: table;
+    table-layout: fixed;
+    width: 100%; 
+  }
+  
+  .col-middle{
+    vertical-align: middle;
+    display: table-cell;
+    float: none;
+  }
+  
+  .panel-list-img {
+    height: 61px;
+  }
+  
+  .panel-list-img img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  @media (max-width: 767px){
+    .row-table, .col-middle{
+      display: block;
+    }
+  
+    .panel-list-img {
+      height: 170px;
+    }
+  }
+  
+
 
 /*
 *  Dropzone.js用のスタイル
